fix(app): hide desktop case study page title on mobile

--- a/app/src/styles/_global.scss
+++ b/app/src/styles/_global.scss
@@ -56,3 +56,11 @@ a {
 .o80 {
   opacity: 0.8;
 }
+
+.z8888 {
+  z-index: 8888;
+}
+
+.z9999 {
+  z-index: 9999;
+}
